...
    fun Headlinesと書かれたトピックを選択するとDoneボタンがenabled状態になること() {
        composeTestRule.setContent {
            ForYouRoute(
                viewModel = viewModel
            )
        }
        // Content Descriptionに `Headlines` と書かれているコンポーネントをクリックする
        composeTestRule.onNodeWithContentDescription("Headlines").performClick()
        composeTestRule.onRoot().captureRoboImage()
    }
}

private val testTopics = listOf(
...
    Topic("3", "Compose", "", "", "", "https://example.com/img/Compose.svg"),
)

private val testNewsResource = listOf(
    NewsResource(
        "100",
        "Pixel Watch",
        "",
        "",
        null,
        Instant.parse("2021-11-08T00:00:00.000Z"),
        NewsResourceType.Article,
        topics = listOf(Topic("1", "Headlines", "", "", "", ""))
...
