...
        verticalArrangement = Arrangement.spacedBy(24.dp),
        modifier = modifier
            .fillMaxSize()
            .testTag("forYou:feed"),
        state = state
    ) {
        onboarding(
            onboardingUiState = onboardingUiState,
            onTopicCheckedChanged = onTopicCheckedChanged,
            saveFollowedTopics = saveFollowedTopics,
            // Custom LayoutModifier to remove the enforced parent 16.dp contentPadding
            // from the LazyVerticalGrid and enable edge-to-edge scrolling for this section
            interestsItemModifier = Modifier
...
